# MumulMumul

./: .gitignore  pyproject.toml  run_app.py  run_dev.py  run_test.py
app/: config.py  main.py
app/api/: attendance.py  camp.py  chatbot.py  connection.py  curriculum.py  feedbackBoard.py  learning_chatbot.py  learning_quiz.py  meeting.py  meeting_chatbot.py  team_chat.py  user.py
app/core/: db.py  logger.py  models.py  mongodb.py  schemas.py  state.py  timezone.py
app/graphs/: example_graph.py
app/nodes/: exmaple_node.py
app/services/attendance/: agent.py  calculator.py  llm.py  repository.py  schemas.py  service.py
app/services/curriculum/: agent.py  calculator.py  llm.py  repository.py  schemas.py  service.py
app/services/db_service/: attendance_report.py  camp.py  curriculum_config.py  curriculum_reports.py  feedbackBoard.py  feedback_reports.py  learning_chat_log.py  learning_chatbot.py  learning_chatbot_log.py
app/services/feedbackBoard/: graph.py  io_contract.py  schemas.py  service.py  test.py  wordcloud.py
app/services/learning_chatbot/: service.py
app/services/learning_quiz/: llm.py  prompt.py  schemas.py  service.py  vectorstore.py
app/services/meeting/: audio_denoiser.py  audio_processor.py  audio_service.py  chat_service.py  embedding_service.py  meeting_service.py  paths.py  (+8 more)
app/sql/: createAttendencyDummies.py  createCampDummies.py  createChatDummies.py  createDummies.py  createFeedbackBoardPostDummies.py  createMeetingDummies.py  createSessionLogDummies.py  createUserDummies.py  feedback_board_posts_dummy.csv  initializeUserDummies.py  learning_chat_logs_dummy.csv  removeTable.py  updateTable.py
app/tools/: example_tool.py
app/utils/: time_utils.py
doc/: 속닥숲리포트.md  출결_flow.md  학습도우미_flow.md
notebooks/seoyoung/: personal_survey_test.py  test.ipynb
notebooks/yojun/: chatbot_rag_optimized.py  chatbot_rag_optimized_fast.py  chatbot_test.py  interactive_chatbot.py  lecture_save.py  main.py  multi_answer.py  test.ipynb  time.py  vectorstore_manager.py
storage/: mumul.db  personal_survey.json
storage/vectorstore/: chroma.sqlite3
streamlit_app/: main.py
streamlit_app/api/: attendance.py  camp.py  chatbot.py  curriculum.py
streamlit_app/pages/: attendance.py  cource.py  curriculum.py  example.py  속닥숲리포트.py  익명게시판.py  출결.py  출결리포트.py  커리큘럼.py  커리큘럼분석.py  학습리포트.py
(+69 files in other folders)
