[project]
name = "mumulmumul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "jupyter>=1.1.1",
    "langchain>=1.0.8",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.3.0",
    "pytesseract>=0.3.13",
    "schema>=0.7.8",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
