[project]
name = "mumulmumul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "jupyter>=1.1.1",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "motor>=3.7.1",
    "openai-whisper==20231117",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
